After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 775365 - info: Properly start and end dwfl sessions when getting stack traces
info: Properly start and end dwfl sessions when getting stack traces
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer (core)
unspecified
Other All
: Normal normal
: 1.11.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks: 775541
 
 
Reported: 2016-11-29 20:41 UTC by Thibault Saunier
Modified: 2016-12-06 17:14 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
info: Properly start and end dwfl sessions when getting stack traces (3.11 KB, patch)
2016-11-29 20:41 UTC, Thibault Saunier
committed Details | Review

Description Thibault Saunier 2016-11-29 20:41:25 UTC
See commit message.
Comment 1 Thibault Saunier 2016-11-29 20:41:30 UTC
Created attachment 340994 [details] [review]
info: Properly start and end dwfl sessions when getting stack traces

We were creating a new session to retrive each line of a stack trace
and we are supposed to start it once for a whole stack trace.

And pass the whole file to gst-indent.
Comment 2 Thibault Saunier 2016-12-06 17:13:13 UTC
Attachment 340994 [details] pushed as dbe3d2b - info: Properly start and end dwfl sessions when getting stack traces